[tool.poetry]
name = "nonebot_plugin_boardgame"
version = "0.3.4"
description = "适用于 Nonebot2 的棋类游戏插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-boardgame"
repository = "https://github.com/noneplugin/nonebot-plugin-boardgame"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.1", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = "^0.3.0"
nonebot-plugin-session = "^0.2.0"
nonebot-plugin-userinfo = "^0.1.2"
nonebot-plugin-orm = ">=0.3.0,<1.0.0"
nonebot-plugin-htmlrender = "^0.2.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.0"
nonebot-plugin-orm = { version = ">=0.3.0,<1.0.0", extras = ["default"] }

[tool.nonebot]
plugins = ["nonebot_plugin_boardgame"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
